<resources>
    <!--Title-->
    <string name="app_name">Expense </string>
    <string name="action_settings">Settings</string>
    <string name="add_new_expense">Add New Expense</string>
    <string name="add_new_expense_food">Add Food</string>
    <string name="add_new_expense_alcohol">Add Alcohol</string>
    <string name="add_new_expense_weed">Add Weed</string>
    <string name="add_new_expense_gas">Add Gas</string>
    <string name="add_new_expense_accommodation">Add Accommodation</string>
    <string name="add_new_expense_gear">Add Gear</string>
    <string name="add_new_expense_other">Add Other</string>
    <string name="expense_list">Expense List</string>
    <string name="edit_expense_food">Edit Food</string>
    <string name="edit_expense_alcohol">Edit Alcohol</string>
    <string name="edit_expense_weed">Edit Weed</string>
    <string name="edit_expense_gas">Edit Gas</string>
    <string name="edit_expense_accommodation">Edit Accommodation</string>
    <string name="edit_expense_gear">Edit Gear</string>
    <string name="edit_expense_other">Edit Other</string>
    <string name="week_list_title">Week\'s lists</string>
    <string name="add_expense">Add Expense</string>

    <!--Expense Activity-->
    <string name="expense_type_food">Food</string>
    <string name="expense_type_gear">Gear</string>
    <string name="expense_type_alcohol">Alcohol</string>
    <string name="expense_type_weed">Weed</string>
    <string name="expense_type_gas">Gas</string>
    <string name="expense_type_accommodation">Accommodation</string>
    <string name="expense_type_other">Other</string>
    <string name="amount_asterik">Amount *</string>
    <string name="comment_opt">Comment (opt)</string>

    <string name="comments_hint">Enter comments here</string>
    <string name="submit">Submit</string>

    <!--Dialog and Toasts-->
    <string name="please_complete_all_fields">Please complete all required fields</string>
    <string name="submitted_successfully">Submitted successfully</string>
    <string name="submission_failure">An unexpected occurred\nPlease try again</string>
    <string name="delete_all">Delete All</string>
    <string name="delete_all_success_message">Database deleted successfully</string>
    <string name="warning">Warning</string>
    <string name="delete_all_message">Are you sure you want to delete the entire database?</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="unsaved_changes_title">Unsaved Changes</string>
    <string name="unsaved_changes_message">Would you like to discard your unsaved changes?</string>
    <string name="unsaved_changes_discard">Discard</string>
    <string name="unsaved_changes_keep_editing">Keep Editing</string>

    <string name="delete_single_message">Are you sure you want to delete this expense?</string>

    <string name="expense_list_dialog_title">What to do?</string>
    <string name="expense_list_dialog_edit">Edit</string>
    <string name="expense_list_dialog_delete">Delete</string>

    <!--Other-->
    <string name="type">Type</string>
    <string name="amount">Amount</string>
    <string name="date">Date</string>
    <string name="week">Week</string>
    <string name="month">Month</string>
    <string name="comments">Comments</string>
    <string name="total">Total</string>
    <string name="monday">Monday</string>
    <string name="saving">Total savings: %s</string>

    <!--Since we are formatting the text, we can't directly use html tags, instead we need to
         escape using &lt; instead of the opening brackets-->
    <string name="main_report_title_date">Week &lt;big>&lt;b>%1d&lt;/b>&lt;/big> : %2s</string>
    <string name="switch_expense_type">Switch Expense Type</string>
    <string name="chart">Chart</string>


    <string name="this_week_chart">This week\'s Chart</string>
    <string name="last_week_report">Last Week\'s Report</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="budget">Budget</string>
    <string name="weekly_budget">Weekly budget</string>
    <string name="weekly_allowance">Weekly allowance</string>

    <string name="settings_weekly_budget_key" translatable="false">settings_weekly_budget</string>
    <string name="settings_weekly_allowance_key" translatable="false">settings_weekly_allowance_key</string>
    <string name="january">January</string>


</resources>
