<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="tech.khash.expense.MainActivity">

    <item
        android:id="@+id/action_list"
        android:orderInCategory="10"
        android:title="@string/list"
        android:icon="@drawable/ic_list_white"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_chart"
        android:orderInCategory="20"
        android:title="@string/chart"
        android:icon="@drawable/ic_show_chart_white"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_report_last_week"
        android:orderInCategory="30"
        android:title="@string/last_week_report"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_delete_all"
        android:orderInCategory="600"
        android:title="@string/delete_all"
        app:showAsAction="never" />
</menu>
