<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="6dp">

    <TextView
        android:id="@+id/text_type_title"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        style="@style/text_view_general"
        android:layout_margin="4dp"
        android:text="@string/type"/>

    <TextView
        android:id="@+id/text_type"
        style="@style/text_view_general"
        tools:text="Food"
        app:layout_constraintBaseline_toBaselineOf="@id/text_type_title"
        app:layout_constraintStart_toEndOf="@id/text_type_title"
        android:textStyle="bold"
        android:layout_marginStart="12dp"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/text_amount_title"
        app:layout_constraintBaseline_toBaselineOf="@id/text_type_title"
        app:layout_constraintEnd_toStartOf="@id/text_amount"
        style="@style/text_view_general"
        android:layout_margin="4dp"
        android:text="@string/amount"/>

    <TextView
        android:id="@+id/text_amount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBaseline_toBaselineOf="@id/text_type_title"
        style="@style/text_view_general"
        android:layout_margin="4dp"
        android:textStyle="bold"
        android:textSize="18sp"
        tools:text="23"/>




    <TextView
        android:id="@+id/text_week_title"
        app:layout_constraintTop_toBottomOf="@id/text_type_title"
        app:layout_constraintStart_toStartOf="parent"
        style="@style/text_view_general"
        android:layout_margin="4dp"
        android:text="@string/week"/>

    <TextView
        android:id="@+id/text_week"
        style="@style/text_view_general"
        tools:text="3"
        app:layout_constraintBaseline_toBaselineOf="@id/text_week_title"
        app:layout_constraintStart_toEndOf="@id/text_week_title"
        android:textStyle="bold"
        android:layout_marginStart="12dp"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/text_month_title"
        app:layout_constraintBaseline_toBaselineOf="@id/text_week_title"
        app:layout_constraintEnd_toStartOf="@id/text_month"
        style="@style/text_view_general"
        android:layout_margin="4dp"
        android:text="@string/month"/>

    <TextView
        android:id="@+id/text_month"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBaseline_toBaselineOf="@id/text_month_title"
        style="@style/text_view_general"
        android:layout_margin="4dp"
        android:textStyle="bold"
        android:textSize="18sp"
        tools:text="2"/>

    <TextView
    android:id="@+id/text_date_title"
    app:layout_constraintTop_toBottomOf="@id/text_week_title"
    app:layout_constraintStart_toStartOf="parent"
    style="@style/text_view_general"
    android:layout_margin="4dp"
    android:text="@string/date"/>

    <TextView
        android:id="@+id/text_date"
        style="@style/text_view_general"
        tools:text="MON, Feb.22.2018"
        app:layout_constraintBaseline_toBaselineOf="@id/text_date_title"
        app:layout_constraintStart_toEndOf="@id/text_date_title"
        android:textStyle="bold"
        android:layout_marginStart="12dp"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/text_comment_title"
        app:layout_constraintTop_toBottomOf="@id/text_date_title"
        app:layout_constraintStart_toStartOf="parent"
        style="@style/text_view_general"
        android:layout_margin="4dp"
        android:text="@string/comments"/>

    <TextView
        android:id="@+id/text_comment"
        style="@style/text_view_general"
        tools:text="Some text"
        app:layout_constraintBaseline_toBaselineOf="@id/text_comment_title"
        app:layout_constraintStart_toEndOf="@id/text_comment_title"
        android:layout_marginStart="12dp" />


</androidx.constraintlayout.widget.ConstraintLayout>